--- a/package.json
+++ b/package.json
@@ -2,11 +2,16 @@
   "name": "utils-agsi",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "utils-agsi.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git://github.com/niltonbsgi/utils-agsi.git"
   },
   "keywords": [],
   "author": "",
   "license": "ISC"
 }
+
